Fix DEB package